{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 8,
  "lineage": "e431cd9d-c00a-c3fb-3317-9b446868750d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0827b3068f1548bf6",
            "arn": "arn:aws:ec2:ap-southeast-1:880110984424:instance/i-0c017d008eab74cad",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c017d008eab74cad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-092a5c905c0b0c3ef"
              }
            ],
            "primary_network_interface_id": "eni-092a5c905c0b0c3ef",
            "private_dns": "ip-172-31-17-34.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.34",
            "public_dns": "ec2-54-169-171-97.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.169.171.97",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f3be75639487cf35",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terra-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0806f42a75cb4f6c8",
            "tags": {
              "Name": "terrainstance",
              "Project": "terraform"
            },
            "tags_all": {
              "Name": "terrainstance",
              "Project": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dbc497ef261a913e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "880110984424",
            "id": "i-0c017d008eab74cad",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.terra-sg",
            "data.aws_ami.amiID"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terra-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:880110984424:security-group/sg-0dbc497ef261a913e",
            "description": "terra-sg",
            "egress": [],
            "id": "sg-0dbc497ef261a913e",
            "ingress": [],
            "name": "terra-sg",
            "name_prefix": "",
            "owner_id": "880110984424",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terra-sg"
            },
            "tags_all": {
              "Name": "terra-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f6d37d1fa587ef8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "880110984424",
            "id": "sg-0dbc497ef261a913e",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_Out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:880110984424:security-group-rule/sgr-054cad34392fe224d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-054cad34392fe224d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-1",
            "security_group_id": "sg-0dbc497ef261a913e",
            "security_group_rule_id": "sgr-054cad34392fe224d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "880110984424",
            "id": "sgr-054cad34392fe224d",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.terra-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_out_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:880110984424:security-group-rule/sgr-05ce303edfad3fb33",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-05ce303edfad3fb33",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-1",
            "security_group_id": "sg-0dbc497ef261a913e",
            "security_group_rule_id": "sgr-05ce303edfad3fb33",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "880110984424",
            "id": "sgr-05ce303edfad3fb33",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.terra-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:880110984424:security-group-rule/sgr-027a1a93d422357c5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-027a1a93d422357c5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-1",
            "security_group_id": "sg-0dbc497ef261a913e",
            "security_group_rule_id": "sgr-027a1a93d422357c5",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "880110984424",
            "id": "sgr-027a1a93d422357c5",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.terra-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:880110984424:security-group-rule/sgr-0cff2c3ffa623b6cb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0cff2c3ffa623b6cb",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-southeast-1",
            "security_group_id": "sg-0dbc497ef261a913e",
            "security_group_rule_id": "sgr-0cff2c3ffa623b6cb",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "880110984424",
            "id": "sgr-0cff2c3ffa623b6cb",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.terra-sg"
          ]
        }
      ]
    }
  ]
}